--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.1
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
@@ -15,6 +16,7 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 nltk==3.9.1
 numpy==2.2.4
+packaging==25.0
 pandas==2.2.3
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
@@ -29,4 +31,3 @@ tqdm==4.67.1
 typing_extensions==4.13.2
 tzdata==2025.2
 Werkzeug==3.1.3
- 
